--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="news_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- Allow internet access -->
+    <uses-permission android:name="android.permission.INTERNET"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
